--- a/client/src/components/Header/style.module.css
+++ b/client/src/components/Header/style.module.css
@@ -13,9 +13,20 @@
     border-radius: 10px;
     margin-right: 20px;
     box-shadow: 2px 3px 3px 1px rgba(0, 0, 0, 0.2);
+    
+}
+.button-dropdown{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 .logo{
+    margin-left: 15px;
     display: flex;
     justify-content: flex-start;
     width: 50px;
+}
+.search{
+    display: flex;
+    align-items: center;
 }
